--- a/sass/gsaptrain.sass
+++ b/sass/gsaptrain.sass
@@ -1,9 +1,12 @@
-body
-    cursor: none
+html
+    scroll-behavior: smooth
+    body
+    // cursor: none
     background-color: orange
     overflow-x: hidden
     font-size: 16px
     a
+        color: #000
         display: block
         text-decoration: none
     img
@@ -151,7 +154,7 @@ body
                     button
                         border: 0
                         border-radius: 25px
-                        cursor: none
+                        // cursor: none
                         outline: 0
                         padding: 10px
                         font-size: 1.2rem
@@ -192,6 +195,7 @@ body
             overflow: hidden
             .imgs
                 overflow: hidden
+                background-color: green
                 .img_inner
                     position: relative
                     font-size: 0
